--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "react-molecular-weight",
   "version": "1.0.0",
   "description": "redux version of my molecular weight caluclator app",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
-    "test": "node server.js"
+    "dev": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --inline --history-api-fallback"
   },
   "repository": {
     "type": "git",
@@ -25,20 +25,29 @@
     "express": "^4.14.0",
     "firebase": "^3.6.4",
     "morgan": "^1.7.0",
-    "react": "^0.14.3",
+    "react": "^0.14.8",
     "react-bootstrap-modal": "^3.0.1",
-    "react-dom": "^0.14.3",
+    "react-dom": "^0.14.8",
     "react-redux": "^5.0.1",
-    "react-router": "^3.0.0",
+    "react-router": "^3.0.3",
     "redux": "^3.6.0"
   },
   "devDependencies": {
-    "babel-core": "^6.3.13",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-env": "^1.2.2",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
+    "eslint": "^3.18.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3",
+    "file-loader": "^0.10.1",
+    "react-hot-loader": "^1.3.1",
     "redux-devtools": "^3.3.1",
-    "webpack": "^1.13.1"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.2"
   },
   "bugs": {
     "url": "https://github.com/MichelleHettinger/ReduxMolecularWeightCalculator/issues"
