--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,7 @@
   "rules": {
     "jsx-quotes": [2, "prefer-single"],
     "react/jsx-curly-spacing": [2, "always"],
-    "react/prefer-stateless-function": [0]
+    "react/prefer-stateless-function": [0],
     "indent": [
       2,
       2,
@@ -16,7 +16,7 @@
     ],
     "linebreak-style": [
       2,
-      "unix"
+      "windows"
     ],
     "semi": [
       2,
@@ -25,7 +25,8 @@
     "no-reserved-keys": 0,
     "no-wrap-func": 0,
     "spaced-line-comment": 0,
-    "no-console":1,
+    "no-console": 1,
+    "spaced-comment": 0,
     // disabled dueto eslint error
     "no-duplicate-case": 0,
     "object-curly-spacing": 0,
@@ -38,7 +39,6 @@
     "node": true,
     "browser": true
   },
-  "extends": "airbnb",
   "ecmaFeatures": {
     "jsx": true,
     "experimentalObjectRestSpread": true
