--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "escope": "^3.6.0",
     "eslint": "^3.18.0",
     "eslint-config-airbnb": "^14.1.0",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-babel": "^4.1.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
@@ -84,9 +86,5 @@
     "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.2"
-  },
-  "bugs": {
-    "url": "https://github.com/MichelleHettinger/ReduxMolecularWeightCalculator/issues"
-  },
-  "homepage": "https://github.com/MichelleHettinger/ReduxMolecularWeightCalculator#readme"
+  }
 }
