--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-router": "^3.0.3",
     "react-select": "^1.0.0-rc.3",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "shortid": "^2.2.8"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
