--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-replace": "^0.5.4",
     "immutable": "^3.8.1",
     "jsrsasign": "^7.1.2",
+    "mock": "^0.1.1",
     "moment": "^2.18.1",
     "morgan": "^1.7.0",
     "node-sass": "^4.5.2",
