--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.15.2",
     "babel-polyfill": "^6.23.0",
     "body-parser": "^1.15.2",
+    "bootstrap": "^3.3.7",
     "bootstrap-sass": "^3.3.7",
     "classnames": "^2.2.5",
     "downloadjs": "^1.4.7",
@@ -70,6 +71,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "gulp": "^3.9.1",
     "gulp-load-plugins": "^1.5.0",
@@ -77,6 +79,7 @@
     "gulp-serve": "^1.4.0",
     "gulp-size": "^2.1.0",
     "http-proxy": "^1.16.2",
+    "node-sass": "^4.5.2",
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^1.3.1",
     "redux-devtools": "^3.3.1",
