--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "font-awesome": "^4.7.0",
     "gulp-replace": "^0.5.4",
     "immutable": "^3.8.1",
+    "isomorphic-fetch": "^2.2.1",
     "jsrsasign": "^7.1.2",
     "mock": "^0.1.1",
     "moment": "^2.18.1",
+    "mongoose": "^4.10.2",
     "morgan": "^1.7.0",
     "node-sass": "^4.5.2",
     "node-uuid": "^1.4.8",
@@ -50,6 +52,7 @@
     "react-router": "^3.0.3",
     "react-select": "^1.0.0-rc.3",
     "redux": "^3.6.0",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "shortid": "^2.2.8"
   },
