--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
     "jsx-quotes": [2, "prefer-single"],
     "react/jsx-curly-spacing": [2, "always"],
     "react/prefer-stateless-function": [0],
+    "react/jsx-filename-extension": 0,
     "indent": [
       2,
       2,
