--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "react-router": "^3.0.3",
     "react-select": "^1.0.0-rc.3",
     "redux": "^3.6.0",
+    "redux-devtools-dock-monitor": "^1.1.2",
+    "redux-devtools-log-monitor": "^1.3.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "shortid": "^2.2.8"
