--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "redux version of my molecular weight caluclator app",
   "scripts": {
-    "dev": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --inline --history-api-fallback"
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --inline --history-api-fallback"
   },
   "repository": {
     "type": "git",
@@ -40,14 +40,15 @@
     "node-sass": "^4.5.2",
     "node-uuid": "^1.4.8",
     "path": "^0.12.7",
+    "prop-types": "^15.5.10",
     "qs": "^6.4.0",
     "rc-time-picker": "^2.3.3",
-    "react": "^0.14.8",
+    "react": "^15.5.4",
     "react-bootstrap": "^0.30.8",
     "react-bootstrap-modal": "^3.0.1",
     "react-datepicker": "^0.44.0",
     "react-datetime": "^2.8.8",
-    "react-dom": "^0.14.8",
+    "react-dom": "^15.5.4",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.3",
     "react-select": "^1.0.0-rc.3",
