--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-datetime": "^2.8.8",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.3",
+    "react-redux-spinner": "^0.7.2",
     "react-router": "^3.0.3",
     "react-select": "^1.0.0-rc.3",
     "redux": "^3.6.0",
