--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^3.3.7",
     "bootstrap-sass": "^3.3.7",
     "classnames": "^2.2.5",
+    "cookies": "^0.7.0",
     "downloadjs": "^1.4.7",
     "express": "^4.15.2",
     "file-loader": "^0.10.1",
@@ -32,7 +33,9 @@
     "gulp-replace": "^0.5.4",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
+    "jsonwebtoken": "^7.4.1",
     "jsrsasign": "^7.1.2",
+    "method-override": "^2.3.9",
     "mock": "^0.1.1",
     "moment": "^2.18.1",
     "mongoose": "^4.10.2",
@@ -58,7 +61,8 @@
     "redux-devtools-log-monitor": "^1.3.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "shortid": "^2.2.8"
+    "shortid": "^2.2.8",
+    "validator": "^7.0.0"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
