--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "morgan": "^1.7.0",
     "node-sass": "^4.5.2",
     "node-uuid": "^1.4.8",
+    "password-hash-and-salt": "^0.1.4",
     "path": "^0.12.7",
     "prop-types": "^15.5.10",
     "qs": "^6.4.0",
