--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap-sass": "^3.3.7",
     "classnames": "^2.2.5",
     "cookies": "^0.7.0",
+    "crypto-js": "^3.1.9-1",
     "downloadjs": "^1.4.7",
     "express": "^4.15.2",
     "file-loader": "^0.10.1",
