--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "bootstrap-sass": "^3.3.7",
     "classnames": "^2.2.5",
     "cookies": "^0.7.0",
+    "cookies-js": "^1.2.3",
     "crypto-js": "^3.1.9-1",
     "downloadjs": "^1.4.7",
     "express": "^4.15.2",
+    "express-session": "^1.15.3",
     "file-loader": "^0.10.1",
     "firebase": "^3.6.4",
     "font-awesome": "^4.7.0",
@@ -59,6 +61,7 @@
     "react-router": "^3.0.3",
     "react-select": "^1.0.0-rc.3",
     "redux": "^3.6.0",
+    "redux-cookie": "^0.5.9",
     "redux-devtools-dock-monitor": "^1.1.2",
     "redux-devtools-log-monitor": "^1.3.0",
     "redux-logger": "^3.0.6",
