--- a/package.json
+++ b/package.json
@@ -24,8 +24,6 @@
     "bootstrap": "^3.3.7",
     "bootstrap-sass": "^3.3.7",
     "classnames": "^2.2.5",
-    "cookies": "^0.7.0",
-    "cookies-js": "^1.2.3",
     "crypto-js": "^3.1.9-1",
     "downloadjs": "^1.4.7",
     "express": "^4.15.2",
@@ -45,6 +43,7 @@
     "morgan": "^1.7.0",
     "node-sass": "^4.5.2",
     "node-uuid": "^1.4.8",
+    "passport": "^0.3.2",
     "password-hash-and-salt": "^0.1.4",
     "path": "^0.12.7",
     "prop-types": "^15.5.10",
@@ -61,7 +60,6 @@
     "react-router": "^3.0.3",
     "react-select": "^1.0.0-rc.3",
     "redux": "^3.6.0",
-    "redux-cookie": "^0.5.9",
     "redux-devtools-dock-monitor": "^1.1.2",
     "redux-devtools-log-monitor": "^1.3.0",
     "redux-logger": "^3.0.6",
